# snarkVM

./: Cargo.toml
algorithms/: Cargo.toml
console/network/: Cargo.toml
cosmwasm/: Cargo.toml
cosmwasm/src/: lib.rs
fields/src/: macros.rs
parameters/: Cargo.toml
parameters/src/: macros.rs
parameters/src/canary/: mod.rs
parameters/src/errors/: parameter.rs
parameters/src/mainnet/: mod.rs
parameters/src/testnet/: mod.rs
synthesizer/program/src/logic/instruction/operation/: hash.rs
utilities/: Cargo.toml
utilities/src/biginteger/: bigint_256.rs  bigint_384.rs  mod.rs
