[package]
name = "snarkvm-cosmwasm"
version = "1.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
full = ["account", "network", "types", "program"]
account = ["snarkvm-console-account"]
network = ["snarkvm-console-network"]
types = ["snarkvm-console-types"]
program = ["snarkvm-console-program"]

[dependencies.snarkvm-console-account]
path = "../console/account"
version = "=1.1.0"
optional = true

[dependencies.snarkvm-console-network]
path = "../console/network"
version = "=1.1.0"
features = ["cosmwasm"]
optional = true

[dependencies.snarkvm-console-types]
path = "../console/types"
version = "=1.1.0"
default-features = false
features = ["address"]
optional = true

[dependencies.snarkvm-console-program]
path = "../console/program"
version = "=1.1.0"
optional = true

[dependencies.getrandom]
version = "0.2"
features = ["custom"]
